5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4163/executions/1723_2503.log
== TEST (2019-05-14 11:16:42) 
-- CODE:
from math import*
n = int(input(""))

soma = 0
i = 0
fim = n-1

while (i<=fim):
	soma = soma  + ((-1) **i)/ 2*i+1
	i = i +1
	
print(round(soma, 8))


-- OUTPUT:
102.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:18:20) 
-- CODE:
from math import*
n = int(input(""))

soma = 0
i = 0
fim = n-1

while (i<=fim):
	soma = soma  + ((-1) **i*4)/ 2*i+1
	i = i +1
	
print(round(soma, 8))


-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:18:41) 
-- CODE:
from math import*
n = int(input(""))

soma = 0
i = 0
fim = n-1

while (i<=fim):
	soma = soma  + ((-1) **i*4)/ 2*i+1
	i = i +1
	
print(round(soma, 8))


-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:18:55) 
-- CODE:
from math import*
n = int(input(""))

soma = 0
i = 0
fim = n-1

while (i<=fim):
	soma = soma  + ((-1) **i*)/ 2*i+1*4
	i = i +1
	
print(round(soma, 8))


-- ERROR:
File "XXXX", line 9
    soma = soma  + ((-1) **i*)/ 2*i+1*4
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:19:18) 
-- CODE:
from math import*
n = int(input(""))

soma = 0
i = 0
fim = n-1

while (i<=fim):
	soma = soma  + ((-1) **i*)/ 2*i+1*(4)
	i = i +1
	
print(round(soma, 8))


-- ERROR:
File "XXXX", line 9
    soma = soma  + ((-1) **i*)/ 2*i+1*(4)
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:19:35) 
-- CODE:
from math import*
n = int(input(""))

soma = 0
i = 0
fim = n-1

while (i<=fim):
	soma = soma  + ((-1) **i*)/ (2*i+1)*4
	i = i +1
	
print(round(soma, 8))


-- ERROR:
File "XXXX", line 9
    soma = soma  + ((-1) **i*)/ (2*i+1)*4
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:19:43) 
-- CODE:
from math import*
n = int(input(""))

soma = 0
i = 0
fim = n-1

while (i<=fim):
	soma = soma  + ((-1) **i)/ (2*i+1)*4
	i = i +1
	
print(round(soma, 8))


-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:19:58) 
-- CODE:
from math import*
n = int(input(""))

soma = 0
i = 0
fim = n-1

while (i<=fim):
	soma = soma  + ((-1) **i)/ (2*i+1)*4
	i = i +1
	
print(round(soma, 8))


-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:20:06) 
-- CODE:
from math import*
n = int(input(""))

soma = 0
i = 0
fim = n-1

while (i<=fim):
	soma = soma  + ((-1) **i)/ (2*i+1)*4
	i = i +1
	
print(round(soma, 8))


-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:20:16) 
-- CODE:
from math import*
n = int(input(""))

soma = 0
i = 0
fim = n-1

while (i<=fim):
	soma = soma  + ((-1) **i)/ (2*i+1)*4
	i = i +1
	
print(round(soma, 8))


-- EXECUTION TIME:
0.155484
-- TEST CASE 1:
---- input:
136
---- correct output:
3.13423981
---- user output:
3.13423981
-- TEST CASE 2:
---- input:
22
---- correct output:
3.09616153
---- user output:
3.09616153
-- TEST CASE 3:
---- input:
15
---- correct output:
3.20818565
---- user output:
3.20818565
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
